[package]
name = "chadtechus"
version = "0.1.0"
authors = ["Chadtech chadtech0@gmail.com"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
notify = "4.0.15"
diesel = { version = "1.4.4", features = ["postgres"] }
dotenv = "0.15.0"
futures = "0.1"
juniper = "0.14.2"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
tokio = { version = "0.2", features = ["macros"] }
tokio-postgres = { version = "0.7", features = ["with-uuid-0_8"] }
