[package]
name = "chadtechus"
version = "0.1.0"
authors = ["Chadtech chadtech0@gmail.com"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
notify = "4.0.15"
dotenv = "0.15.0"

mysql = "17"
r2d2 = "0.8"
r2d2_mysql = "17.0"

futures = "0.1"
juniper = "0.14.2"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"



#
#[dependencies]
#actix-web = "3"
#
#juniper = "0.14"
#
#mysql = "17"
#r2d2 = "0.8"
#r2d2_mysql = "17.0"
#
#dotenv = "0.15"
#env_logger = "0.8"
#log = "0.4"
#serde = { version = "1.0", features = ["derive"] }
#serde_json = "1.0"
#uuid = { version = "0.8", features = ["serde", "v4"] }