[package]
name = "chadtechus"
version = "0.1.0"
authors = ["Chadtech chadtech0@gmail.com"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
notify = "4.0.15"

diesel = { version = "1.4.4", features = ["mysql", "r2d2"] }
dotenv = "0.15.0"
mysql = "17"
r2d2 = "0.8"
r2d2_mysql = "17.0"
env_logger = "0.9.0"
actix-cors = "0.5.4"

futures = "0.1"
juniper = "0.14.2"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"


#
#uuid = { version = "0.8", features = ["serde", "v4"] }